<resources>
    <string name="app_name">MyEconomizer</string>
    <string name="add_text">Add</string>
    <string name="Name_of_product">Name of product</string>
    <string name="cost_of_product">Cost of goods</string>
    <string name="Volume_of_goods">Volume of goods</string>
    <string name="new_text">New element</string>
    <string name="Cost_per_item">Cost per item</string>
    <string name="action_settings">Settings</string>
    <string name="menu_save">Save table</string>
    <string name="menu_load">Load table</string>
    <string name="menu_save_edit">Edit saves</string>
    <string name="Menu_clear">Clear table</string>
    <string name="shop">Shop</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="save_name">Name to save</string>
</resources>
