<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_items"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:configChanges="orientation|screenSize"
    android:orientation="vertical"
    android:padding="8dp"
    android:textAlignment="textStart"
    android:layout_gravity="start">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/head_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/Name_of_product"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/head_cost"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/cost_of_product"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/head_volume"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Volume_of_goods"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/head_per_item"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cost_per_item"
            android:textColor="@android:color/black" />
    </TableRow>
</TableLayout>