<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation|screenSize"
    tools:context="com.example.pop.myeconomizer.MainActivity">

    <!--<ListView-->
    <!--android:id="@+id/listview_goods"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/new_bttn"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.52"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.729" />-->

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/listview_goods"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/new_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/new_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982"
        tools:text="@string/new_text" />

    <EditText
        android:id="@+id/save_name_txtbx"
        android:layout_width="323dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/save_name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/listview_goods"
        app:layout_constraintEnd_toEndOf="@+id/listview_goods"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/save_name_bttn"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/cancel_name_bttn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/save_name_txtbx"
        app:layout_constraintTop_toBottomOf="@+id/save_name_txtbx" />

    <Button
        android:id="@+id/cancel_name_bttn"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@android:string/cancel"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/save_name_txtbx"
        app:layout_constraintTop_toBottomOf="@+id/save_name_txtbx" />

</android.support.constraint.ConstraintLayout>
